--- a/src/mac-app/Sage.app/Contents/Info.plist
+++ b/src/mac-app/Sage.app/Contents/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>Sage</string>
 	<key>CFBundleGetInfoString</key>
-	<string>Sage SAGE_VERSION Copyright 2009 Sage Developers</string>
+	<string>Sage SAGE_VERSION Copyright 2005- The Sage Development Team</string>
 	<key>CFBundleIconFile</key>
 	<string>appIcon.icns</string>
 	<key>CFBundleIdentifier</key>
@@ -35,7 +35,7 @@
 	<key>NSAppleScriptEnabled</key>
 	<false/>
 	<key>NSHumanReadableCopyright</key>
-	<string>Sage SAGE_VERSION Copyright 2009 Sage Developers</string>
+	<string>Sage SAGE_VERSION Copyright 2005- The Sage Development Team</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
