[mq]: trac_9412.patch

--- a/src/bin/.hgignore
+++ b/src/bin/.hgignore
@@ -296,3 +296,14 @@ ecl
 ecl-config
 testcc.sh
 testcxx.sh
+fsdump
+fsoids
+fsrefs
+fstail
+mkzeoinst
+repozo
+runzeo
+zdaemon
+zeoctl
+zeopack
+zeopasswd
