ticket 9574: add files to .hgignore in local/bin

--- a/src/bin/.hgignore
+++ b/src/bin/.hgignore
@@ -308,3 +308,11 @@ zdaemon
 zeoctl
 zeopack
 zeopasswd
+gfortran
+gfortran-4.0
+gfortran-4.2
+gfortran-64
+gfortran-uninstall
+i686-apple-darwin8-gfortran-4.2
+powerpc-apple-darwin8-gfortran-4.2
+zope-testrunner
