#10299: add "patch" to SAGE_LOCAL/bin/.hgignore

--- a/src/bin/.hgignore
+++ b/src/bin/.hgignore
@@ -314,6 +314,7 @@ gfortran-4.0
 gfortran-4.2
 gfortran-64
 gfortran-uninstall
+patch
 i686-apple-darwin8-gfortran-4.2
 powerpc-apple-darwin8-gfortran-4.2
 zope-testrunner
