--- a/src/mac-app/Sage-Info.plist
+++ b/src/mac-app/Sage-Info.plist
@@ -34,6 +34,7 @@
 			<key>LSItemContentTypes</key>
 			<array>
 				<string>org.sagemath.sage-worksheet</string>
+				<string>com.pkware.zip-archive</string>
 			</array>
 			<key>NSDocumentClass</key>
 			<string>MyDocument</string>
@@ -76,10 +77,26 @@
 			<key>CFBundleTypeRole</key>
 			<string>Viewer</string>
 			<key>LSHandlerRank</key>
-			<string>Default</string>
+			<string>Alternate</string>
 			<key>LSItemContentTypes</key>
 			<array>
 				<string>public.html</string>
+			</array>
+			<key>NSDocumentClass</key>
+			<string>MyDocument</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeName</key>
+			<string>Text File</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSHandlerRank</key>
+			<string>Alternate</string>
+			<key>CFBundleTypeIconFile</key>
+			<string>sage-document.icns</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>public.text</string>
 			</array>
 			<key>NSDocumentClass</key>
 			<string>MyDocument</string>
@@ -163,6 +180,75 @@
 				<key>public.filename-extension</key>
 				<array>
 					<string>sage</string>
+				</array>
+			</dict>
+		</dict>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.source-code</string>
+				<string>public.shell-script</string>
+				<string>public.python-script</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>Cython Source Code</string>
+			<key>UTTypeIconFile</key>
+			<string>sage-document-cython.icns</string>
+			<key>UTTypeIdentifier</key>
+			<string>org.cython.cython-source</string>
+			<key>UTTypeReferenceURL</key>
+			<string>http://cython.org/</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>pyx</string>
+				</array>
+			</dict>
+		</dict>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.source-code</string>
+				<string>public.shell-script</string>
+				<string>public.python-script</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>Cython Declaration File</string>
+			<key>UTTypeIconFile</key>
+			<string>sage-document-cython.icns</string>
+			<key>UTTypeIdentifier</key>
+			<string>org.cython.cython-header</string>
+			<key>UTTypeReferenceURL</key>
+			<string>http://cython.org/</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>pxd</string>
+				</array>
+			</dict>
+		</dict>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.source-code</string>
+				<string>public.shell-script</string>
+				<string>public.python-script</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>Sage Preparsed Cython Source Code</string>
+			<key>UTTypeIconFile</key>
+			<string>sage-document-cython.icns</string>
+			<key>UTTypeIdentifier</key>
+			<string>org.sagemath.sage-cython-source</string>
+			<key>UTTypeReferenceURL</key>
+			<string>http://cython.org/</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>spyx</string>
 				</array>
 			</dict>
 		</dict>
