Trac #11748: #11748: ignore .DS_store files

--- a/src/bin/.hgignore
+++ b/src/bin/.hgignore
@@ -1,6 +1,8 @@
 (^|/)\_darcs($|/)
 (^|/)\.hg($|/)
 (^|/)\.hgtags($|/)
+(^|/)\.DS_Store$
+(^|/)\._\.DS_Store$
 ^project.log$
 ^tailor.state$
 ^tailor.state.old$
