Trac #12055: Trac #12055: Upgrade PALP
Add new binaries to .hgignore in SAGE_LOCAL/bin

--- a/src/bin/.hgignore
+++ b/src/bin/.hgignore
@@ -243,16 +243,17 @@ ipwebserver
 isympy
 QuadraticSieve
 certtool
-class.x
-cws.x
+class[-0-9d]*.x
+cws[-0-9d]*.x
 cython
 dbmsr.so
 libgcrypt-config
 libgnutls-config
 libgnutls-extra-config
-nef.x
+mori[-0-9d]*.x
+nef[-0-9d]*.x
 opencdk-config
-poly.x
+poly[-0-9d]*.x
 psktool
 qd-config
 scons
