Trac #12369: Add GCC executables to .hgignore

--- a/src/bin/.hgignore
+++ b/src/bin/.hgignore
@@ -306,14 +306,16 @@ zdaemon
 zeoctl
 zeopack
 zeopasswd
+cpp
+gcov
+.*c\+\+
+.*g\+\+
+.*g\+\+-.*
+.*gcc
+.*gcc-.*
 gfortran
-gfortran-4.0
-gfortran-4.2
-gfortran-64
-gfortran-uninstall
+.*gfortran-.*
 patch
-i686-apple-darwin8-gfortran-4.2
-powerpc-apple-darwin8-gfortran-4.2
 zope-testrunner
 homsimpl
 homchain
