Trac #10492: Change newest_version to be a function inside spkg/install

--- a/.hgignore
+++ b/.hgignore
@@ -13,6 +13,7 @@ examples
 .*\.log
 local
 tmp
+spkg/Makefile
 spkg/base/prereq-0.7-install
 spkg/base/prereq-0.8-install
 spkg/base/bzip2-.*\.tar\.gz
