Trac #12814: Add prereq-0.9-install to .hgignore

--- a/.hgignore
+++ b/.hgignore
@@ -16,6 +16,7 @@ tmp
 spkg/Makefile
 spkg/base/prereq-0.7-install
 spkg/base/prereq-0.8-install
+spkg/base/prereq-0.9-install
 spkg/base/.*\.tar\.gz
 spkg/base/.*\.tar
 spkg/build
