--- a/src/ext/.hgignore
+++ b/src/ext/.hgignore
@@ -1,9 +1,8 @@
 \.dat$
 \.sig$
+\.DS_Store$
 magma/stoll/polys
-\.pyc
 pickle_jar.tar.bz2
-\.DS_Store
 sage/ext/mac-app/build
 sage/ext/mac-app/Sage.xcodeproj/.*.pbxuser
 sage/ext/mac-app/Sage.xcodeproj/.*.mode1v3
