--- a/src/mac-app/Sage-Info.plist
+++ b/src/mac-app/Sage-Info.plist
@@ -129,7 +129,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>SAGE_VERSION</string>
+	<string>SAGE_VERSION</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
